# ljcut

./: .gitignore  README.md  啟動桌面版.bat
backend/: main.py  requirements.txt  server_entry.py
backend/services/: audio_calibrate.py  ffmpeg_service.py  llm_service.py  subtitle.py  thumb_service.py  transcribe.py  youtube_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: overlay.html  rec-indicator.html
frontend/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts  utils.ts
frontend/src/components/: AiPanel.tsx  ExportProgress.tsx  RecordingSettingsModal.tsx  SettingsModal.tsx  SpeedMenu.tsx  YouTubeUploadModal.tsx
scripts/: build-release.ps1  make-latest-json.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: transcribe_worker.py
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  ffmpeg.rs  mod.rs  recorder.rs  sidecar.rs  subtitle.rs  transcribe.rs  upload.rs
src-tauri/src/services/: ffmpeg_service.rs  llm_service.rs  mod.rs  subtitle_service.rs
